@@ -1,9 +1,10 @@
 0.9.92 (1.0.0 beta3):
+-Add: User defined command line arguments for lame
 -Fix: Remove audio/mpeg mime type from mp1 and mp2 codecs in the ffmpeg and mplayer plugins because it would conflict with mp3
 -Fix: soundKonverter would get stuck when trying to add replaygain (add argument for mp3gain/aacgain to lower gain to avoid clipping)
 -Fix: soundkonverter would crash when trying to rip a cd or add files if the options widget can't be initialized correctly
 -Fix: The options widget wasn't initialized correctly causing some crashes
--Add: User defined command line arguments for lame
+-Fix: Don't truncate text in the combo button (add files, etc.)
 
 0.9.91 (1.0.0 beta2):
 -Add: flac and metaflac plugins
